--- a/src/components/Sidebar/Sidebar.html
+++ b/src/components/Sidebar/Sidebar.html
@@ -169,7 +169,7 @@
             </div>
 
             <div class="navigation__item navigation__item_hide">
-              <div class="navigation__header" on:click="test">
+              <div class="navigation__header" on:click="${test}">
                 <div class="icon icon_tag"></div>
                 <div class="nav-text">Товары и услуги</div>
               </div>
