--- a/src/components/Button/Button.html
+++ b/src/components/Button/Button.html
@@ -26,5 +26,6 @@
         background-color: blue;
         font-family: sans-serif;
         appearance: button;
+        box-sizing: border-box;
     }
 </style>
