--- a/src/components/Page/Page.html
+++ b/src/components/Page/Page.html
@@ -6,9 +6,7 @@
         ></Navigation:>
         <div class="page__inner">
             <div class="page__content">    
-                <slot name="main"> 
-
-                </slot>
+                <slot name="main"></slot>
             </div>
         </div>
     </div>
@@ -62,5 +60,6 @@
    .page__content {
         width: 100%;
         max-width: 1100px;
+        min-width: 960px;
    }
 </style>
