--- a/src/components/Company-logo/Company-logo.html
+++ b/src/components/Company-logo/Company-logo.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="company-logo">111</div>
+    <div class="company-logo"></div>
 </template>
 
 <script>
@@ -14,5 +14,8 @@
         border-radius: 16px;
         background-color: #fff;
         box-shadow: 0 0 0 1px rgba(0,0,0,0.01);
+        background-image: url(@component/logo.png);
+        background-position: center;
+        background-repeat: no-repeat;
     }
 </style>
