--- a/src/components/Navigation/Navigation.html
+++ b/src/components/Navigation/Navigation.html
@@ -47,6 +47,9 @@
        box-sizing: border-box;
        font-size: 14px;
        min-width: 960px;
+       position: fixed;
+       z-index: 100;
+       width: 100vw;
 
        .page_theme_light & {
           background-color: #fff;  
