--- a/src/components/Page/Page.html
+++ b/src/components/Page/Page.html
@@ -56,10 +56,12 @@
    .page__inner {
         display:flex;
         justify-content: center;
+        
    }
    .page__content {
         width: 100%;
         max-width: 1100px;
         min-width: 960px;
+        padding: 0 16px;
    }
 </style>
