--- a/src/components/Button/Button.html
+++ b/src/components/Button/Button.html
@@ -93,11 +93,12 @@
        }
 
        .page_theme_dark & {
-           color: #fff;
+        
        }
 
        .page_theme_light &_type_tool {
             border: 1px solid rgba(0,0,0,0.1);
+            color: #000;
 
             &:hover {
                 background-color: rgba(0,0,0,0.05);
@@ -106,6 +107,7 @@
 
        .page_theme_dark &_type_tool {
             border: 1px solid rgba(255,255,255,0.2);
+            color: #fff;
 
             &:hover {
                 background-color: rgba(255,255,255,0.1);
@@ -114,6 +116,7 @@
 
        &_type_gdu {
            background-color: #FFD353;
+           color: #000;
            width:fit-content;
 
            &:hover {
