--- a/src/components/Button/Button.html
+++ b/src/components/Button/Button.html
@@ -22,6 +22,9 @@
             }
         },
         methods: {
+            test: function(e){
+                console.log(e)
+            },
             setType: function(type){
                 let t = ''
 
