--- a/src/components/Stars/Stars.html
+++ b/src/components/Stars/Stars.html
@@ -1,7 +1,7 @@
 <template>
     <div class="stars">
+        ${[...Array(5)].map((e,i)=> ((i < rait) ? `<Icon: name="star" class="stars__star stars__star_filed"></Icon:>` : `<Icon: name="star" class="stars__star"></Icon:>`)).join('')}
         
-        ${setRait(rait)}
     </div>
 </template>
 
@@ -13,17 +13,7 @@
             }
         },
         methods: {
-            setRait: function(rait){
-                rait = +rait;
-                let stars = Array(5).fill(1).map((e,i)=> {
-                    
-                    return (i < rait) ? 
-                        `<Icon: name="star" class="stars__star stars__star_filed"></Icon:>` : 
-                        `<Icon: name="star" class="stars__star"></Icon:>`;
-                }).join('');
-
-                return stars;
-            }
+        
         }
     })
 </script>
@@ -32,8 +22,12 @@
     .stars {
         display: flex;
 
-        &__star {
+        .page_theme_light &__star.icon path, .page_theme_dark &__star.icon path {
+            fill: #ccc;
+        }    
 
+        .page_theme_light &__star_filed.icon path, .page_theme_dark &__star_filed.icon path {
+            fill: #FFD353;
         }
     }
 </style>
