--- a/examples/input/src/components/Input/Input.html
+++ b/examples/input/src/components/Input/Input.html
@@ -1,15 +1,17 @@
 <template>
     <div 
-        class="input"
+        class="input ${setSize(size)}"
         ${(width) ? `style="width:${width}px;"` : ''}>
         <div class="input__inner">
             ${(static) ? `<span class="input__static">${static}</span>`: ''}
             <input 
                 ${(id) ? `id="${id}"` : ''}
+                ${(placeholder) ? `placeholder="${placeholder}"` : ''}
                 onfocus="${setFocus}" 
                 onblur="${setBlur}"
                 type="${type}" 
-                value="${value}" />
+                ${(value) ? `value="${value}"` : ''}
+                ${(autofocus) ? 'autofocus' : ''} />
         </div>
     </div>
 </template>
@@ -36,6 +38,13 @@
             },
             width: {
                 type: Number
+            },
+            size: {
+                type: String,
+                default: 's'
+            },
+            placeholder: {
+                type: String
             }
         },
         methods: {
@@ -44,6 +53,9 @@
             },
             setBlur: function(e,el) {   
                 el.parentElement.parentElement.classList.remove('input_focused');
+            },
+            setSize: function(size) {
+                return (size) ? `input_size_${size}` : ''
             }
         }
     })
@@ -54,9 +66,17 @@
         display: flex;
         align-items: center;
         border: 1px solid #e2e5ec;
-        border-radius: 8px;
+        border-radius: 4px;
         font-family: sans-serif;
         font-size: 16px;
+    }
+
+    .input_size_s input {
+        padding: 8px 0;
+    }
+
+    .input_size_m input {
+        padding: 16px 0;
     }
 
     .input_focused {
@@ -73,18 +93,22 @@
 
     .input__static {
         color: #808999;
+        margin-right: 2px;
     }
 
     .input input {
         border:none;
         flex-grow: 1;
         display: block;
-        padding: 8px 0;
         appearance: none;
         font-size: 16px;
     }
 
     .input input:focus {
         outline:none;
+    }
+
+    .input input::placeholder {
+        color: #808999;
     }
 </style>
