--- a/examples/input/src/components/Input/Input.html
+++ b/examples/input/src/components/Input/Input.html
@@ -2,7 +2,7 @@
     <div 
         class="input ${setSize(size)}"
         ${(width) ? `style="width:${width}px;"` : ''}>
-        <div class="input__inner">
+        <div class="input__inner" onclick="${setRipple}">
             ${(static) ? `<span class="input__static">${static}</span>`: ''}
             <input 
                 ${(id) ? `id="${id}"` : ''}
@@ -56,6 +56,20 @@
             },
             setSize: function(size) {
                 return (size) ? `input_size_${size}` : ''
+            },
+            setRipple: function(e,el) {
+                const $ripple = document.createElement('div');
+                
+                $ripple.classList.add('input__ripple');
+                el.append($ripple);
+                const box = el.getBoundingClientRect();
+                $ripple.style.top = `${e.clientY - box.y}px`;
+                $ripple.style.left = `${e.clientX - box.x}px`;
+                
+                setTimeout(()=>{
+                    $ripple.remove();
+                },500);
+
             }
         }
     })
@@ -69,6 +83,8 @@
         border-radius: 4px;
         font-family: sans-serif;
         font-size: 16px;
+        position: relative;
+        overflow: hidden;   
     }
 
     .input_size_s input {
@@ -110,5 +126,26 @@
 
     .input input::placeholder {
         color: #a6adba;
+    }
+    .input__ripple {
+        position: absolute;
+        background-color: rgba(69, 84, 116, 0.08);
+        border-radius: 50%;
+        transform-origin: center;
+        animation: ripple 1s ease-in-out;
+    }
+
+    @keyframes ripple {
+        0% {
+            opacity: 1;
+            width: 20px;
+            height: 20px;
+            transform: scale(1);
+        }
+        
+        100% {
+            opacity: 0;
+            transform: scale(50);
+        }
     }
 </style>
