--- a/examples/search/src/components/App/App.html
+++ b/examples/search/src/components/App/App.html
@@ -1,7 +1,7 @@
 <template>
     <div class="app">
         <div class="app__header">
-            <Input: type="search" placeholder="Search" onchange="${onSearch}"></Input:>
+            <Input: type="search" size="m" placeholder="Search" onchange="${onSearch}"></Input:>
         </div>
         <div class="app__body">
             <div class="app__result" id="result"></div>
